[gd_scene load_steps=2 format=3 uid="uid://b6ekdqrtuicp"]

[ext_resource type="Script" uid="uid://crl58m01371w2" path="res://main_menu.gd" id="1_06t4h"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -270.0
offset_top = 130.0
offset_right = 270.0
offset_bottom = 199.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.49803922, 0, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Skull Fall: Gravity Call"

[node name="CenterContainer" type="CenterContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -67.0
offset_right = 171.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="play_demo" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play the demo!!"

[node name="quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit before playing"

[connection signal="pressed" from="CenterContainer/VBoxContainer/play_demo" to="." method="_on_play_demo_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
